<resources>
    <string name="app_name">Temperature Monitoring</string>
    <string name="chon_ngay">Chọn ngày</string>
    <string name="errorProcess">Có lỗi xảy ra trong quá trình xử lý. Vui lòng kiểm tra lại.</string>
    <string name="ok">Đồng ý</string>
    <string name="errorNetwork">Bạn vui lòng kiểm tra lại kết nối mạng</string>
    <string name="exception">Đã có lỗi không xác định xảy ra, vui lòng liên hệ với quản trị để được trợ giúp!</string>
    <string name="require_2g">Mạng của bạn hiện tại là 2G. Giao dịch có thể chậm</string>
    <string name="require_3g">Mạng của bạn hiện tại là 3G.</string>
    <string name="require_4g">Mạng của bạn hiện tại là 4G.</string>
    <string name="require_wifi">Mạng của bạn hiện tại là WIFI.</string>
    <string name="require_netwotk_unknown">Mạng của bạn không xác định.</string>
    <string name="checkgps">Không lấy được tọa độ ! Bạn vui lòng ra khỏi khu vực có mái che để lấy được tọa độ.</string>
    <string name="cannot_get_location">Không lấy được tọa độ, bạn vui lòng kiểm tra lại GPS .</string>
    <string name="confirmspport">Bạn có muốn gọi đến số %s để được hỗ trợ sử dụng phần mềm ?</string>
    <string name="cancel">Hủy</string>
    <string name="lowMemory">Bộ nhớ RAM còn lại %1$s MB, điều này có thể gây ra 1 số lỗi trong quá trình sử dụng. Ứng dụng chỉ hoạt động ổn định với thiết bị có bộ nhớ RAM lớn hơn %2$s MB</string>
    <string name="okMemory">Bộ nhớ RAM còn lại %1$s MB</string>
    <string name="unknown_host_exception">Xin lỗi, không kết nối được đến máy chủ, vui lòng đảm bảo đã tắt wifi, sim được khai kết nối đầy đủ và đã cài đặt s-intranet!</string>
    <string name="connect_timeout_exception">Xin lỗi, bạn chưa có kết nối đến hệ thống, vui lòng đảm bảo đã tắt wifi, sim được khai kết nối đầy đủ và đã cài đặt s-intranet!</string>
    <string name="socket_timeout_exception">Quá trình phản hồi từ máy chủ quá lâu! Vui lòng kiểm tra kết nối và đường truyền mạng!</string>
    <string name="http_host_connect_exception">Quá trình phản hồi từ máy chủ bị gián đoạn! Vui lòng kiểm tra kết nối và đường truyền mạng!</string>
    <string name="socket_close_exception">Quá trình phản hồi từ máy chủ quá lâu! Vui lòng kiểm tra kết nối và đường truyền mạng và thực hiện lại!</string>
    <string name="illegal_state_exception">Quá trình phản hồi từ máy chủ quá lâu! Vui lòng kiểm tra kết nối và đường truyền mạng và thực hiện lại!</string>
    <string name="socket_io_exception">Quá trình phản hồi từ máy chủ quá lâu! Vui lòng kiểm tra kết nối và đường truyền mạng và thực hiện lại!</string>
    <string name="txt_transaction_timeout">Giao dịch đang được xử lý. Vui lòng kiểm tra lại kết quả sau 5 phút!</string>
    <string name="txt_todate_after_currentdate">Đến ngày không được lớn hơn ngày hiện tại!</string>
    <string name="checktimeupdatejob">Từ ngày phải nhỏ hơn hoặc bằng đến ngày</string>
    <string name="duration_over_load">Bạn chỉ được tìm kiếm trong khoảng thời gian %s ngày.</string>
    <string name="default_notification_channel_id">113</string>
    <string name="title_shop">Shop</string>
    <string name="title_gifts">Gifts</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="channel_name">Channel Name</string>
    <string name="channel_description">Channel Description</string>
    <string name="already_have_account">Already have account? <font color='#FF0000'>Login</font></string>
    <string name="create_account">Create Account</string>
    <string name="email_or_username">Email</string>
    <string name="password">Password</string>
    <string name="rePassword">Re-Password</string>
    <string name="wrong_rePassword">Nhập lại mật khẩu chưa chính xác</string>
    <string name="save_user">Lưu tài khoản</string>
    <string name="login">Login</string>
    <string name="manage_device">Quản lý thiết bị</string>
    <string name="no_device">Không có thiết bị, vui lòng thêm thiết bị</string>
    <string name="turn_on_monitoring">Bật theo dõi thiết bị</string>
    <string name="turn_off_monitoring">Tắt theo dõi thiết bị</string>
    <string name="input_device_name">Vui lòng nhập tên thiết bị</string>
    <string name="delete">Xóa</string>
    <string name="on">Đã bật</string>
    <string name="off">Đã tắt</string>
    <string name="change_device_name">Đổi tên thiết bị</string>
    <string name="service_offline">Cảnh báo nhiệt độ đã bị tắt !</string>
    <string name="service_online">Cảnh báo nhiệt độ đã bật !</string>
    <string name="threshold">Cài đặt ngưỡng cảnh báo !</string>
    <string name="offset">Cài đặt giá trị Offset !</string>
    <string name="looping_time">Cài đặt thời gian cập nhật !</string>
    <string name="not_enough">Please fill in full sign up information !</string>
    <string name="delete_history">Bạn có muốn xóa lịch sử ?</string>
    <string name="reset_device">Bạn có muốn reset thiết bị ?</string>
    <string name="heating_table_above">Upper table temperature</string>
    <string name="heating_table_below">Lower table temperature</string>
    <string name="turn_off_warning">Turn Off Warning</string>
    <string name="history">History:</string>
    <string name="delete_history_1">Delete History</string>

    <string-array name="history_display">
        <item>Chart</item>
        <item>Table</item>
    </string-array>
</resources>
