<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="detail_device"
            type="com.techno.waterpressure.ui.device.model.Device" />

        <variable
            name="vm"
            type="com.techno.waterpressure.ui.device.DetailDeviceViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_textview"
            android:padding="8dp">

            <TextView
                android:id="@+id/txtDeviceName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@{detail_device.name1}"
                android:textSize="@dimen/_24ssp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Tên thiết bị" />

            <ImageView
                android:id="@+id/imgEdit"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_marginStart="16dp"
                android:src="@mipmap/ic_edit"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/txtDeviceName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/txtDeviceName" />

            <ImageView
                android:id="@+id/reset"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:src="@drawable/ic_baseline_refresh_24"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/txtDeviceName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/txtDeviceName" />

            <LinearLayout
                android:id="@+id/lnfirstFloor"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_110sdp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtDeviceName">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="9"
                    android:background="@drawable/bg_textview"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/_4sdp"
                        android:text="@string/heating_table_above"
                        android:textColor="@color/green"
                        android:textSize="@dimen/_16ssp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_thermometer_green" />

                        <TextView
                            android:id="@+id/txtFirst"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_8sdp"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:maxLines="1"
                            android:text="@{detail_device.nO1}"
                            android:textColor="@color/green"
                            android:textSize="@dimen/_48ssp"
                            tools:text="37.4" />

                    </LinearLayout>

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progressBar1"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:max="100"
                    android:progress="@{detail_device.temp}"
                    android:progressDrawable="@drawable/progressbar_states" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnSecond"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_110sdp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lnfirstFloor">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="9"
                    android:background="@drawable/bg_textview"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/_4sdp"
                        android:text="@string/heating_table_below"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/_16ssp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_thermometer_red" />

                        <TextView
                            android:id="@+id/txtHumanTemp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_8sdp"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:maxLines="1"
                            android:text="@{detail_device.nO2}"
                            android:textColor="@color/blue"
                            android:textSize="@dimen/_48ssp"
                            tools:text="37.4" />

                    </LinearLayout>

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:max="100"
                    android:progress="@{detail_device.temp2}"
                    android:progressDrawable="@drawable/progressbar_states2" />

            </LinearLayout>

            <Button
                android:id="@+id/btnWarning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/turn_off_warning"
                android:textColor="@color/red"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lnSecond"
                tools:visibility="visible" />

            <LinearLayout
                android:id="@+id/llHistoryDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnWarning">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/history"
                    android:textSize="@dimen/_14ssp" />

                <Spinner
                    android:id="@+id/spnHistoryDisplay"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/deleteHistory"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:text="@string/delete_history_1"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_14ssp" />

            </LinearLayout>

            <com.github.mikephil.charting.charts.CombinedChart
                android:id="@+id/combineChart"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llHistoryDisplay" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listHistory"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="@dimen/_8sdp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llHistoryDisplay"
                tools:itemCount="3"
                tools:listitem="@layout/item_history"
                tools:targetApi="lollipop" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>